<resources>
    <string name="app_name">Cue</string>
    <string name="cue">Cue.</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_in_button">Sign in</string>
    <string name="client_join">Client? Sign Up here!</string>
    <string name="or">OR</string>
    <string name="business_join">Business Owner? Join Us here!</string>
    <string name="opening_hours">opening hours:</string>
    <string name="address">address:</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name_hint">Full Name</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="button_signup">SIGN UP</string>
    <string name="bo_sign_up_text">Join Our Community</string>
    <string name="business_name">Business Name</string>
    <string name="default_num">10</string>
    <string name="minutes">Minutes before</string>
    <string name="hours">Hours before</string>
    <string name="days">Days before</string>
    <string name="weeks">Weeks before</string>
    <string name="button_save">Save</string>
    <string name="fake_settings_button">Fake Settings</string>
    <string name="save_settings">Save</string>
    <string name="cancel_settings">Cancel</string>
    <string name="no_appointments_today_message">You have no appointments today.\nGo and have fun!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="credits">Credits</string>
    <string name="credit_lopez_mikhael">LOPEZ Mikhael</string>
    <string name="credit_icon1">Icon made by Freepik from www.flaticon.com</string>

    <string name="next">next</string>
    <string name="skip">skip</string>
    <string name="finish_registration">Register</string>
    <string name="previous">previous</string>
    <string name="business_desc">Write business description</string>


    <string name="current_appointment_flag">current appointment flag</string>

    <string name="upload_image">UPLOAD IMAGE</string>
    <string name="business_description_hint">Description of your business</string>
    <string name="business_name_hint">The name of your business</string>
    <string name="save">SAVE</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="state">State</string>
    <string name="the_address_of_your_business">The Address of your business</string>
    <string name="business_address_fill">Fill in the address of your business.</string>
    <string name="business_operating_hours_fill">Fill in when your business is operating.
        \n\nIf your business is not operating in a certain day, do not fill it.</string>
    <string name="opening_hour">opening hour</string>
    <string name="closing_hour">closing hour</string>
    <string name="day_of_the_week">choose a day</string>
    <string name="business_phone_number">The phone number of your business</string>
    <string name="sunday_text">Sunday:</string>
    <string name="monday_text">Monday:</string>
    <string name="tuesday_text">Tuesday:</string>
    <string name="wednesday_text">Wednesday:</string>
    <string name="thursday_text">Thursday:</string>
    <string name="friday_text">Friday:</string>
    <string name="saturday_text">Saturday:</string>

    <string name="settings">Settings</string>
    <string name="generate_a_link_to_the_business">Generate a link to the business</string>
    <string name="edit_your_profile">Edit your profile</string>
    <string name="business_bottom_menu_schedule">Schedule</string>
    <string name="business_bottom_menu_homepage">Homepage</string>
    <string name="business_bottom_menu_clientele">Clientele</string>
    <string name="closed_business_message">Close.</string>
    <string name="business_logout">Logout</string>
    <string name="schedule_an_appointment_manual">Schedule an appointment</string>
    <string name="client_phone_number">Phone number</string>
    <string name="appointment_type_fill_in">Fill in an appointment type</string>
    <string name="type_duration_fill">duration</string>
    <string name="appointment_notes_fill">fill in notes regarding the appointment</string>
    <string name="check_available_type_days">Check days in which this type is available for scheduling</string>

    <string name="hint_type_name">Appointment Type Name</string>
    <string name="notes_for_clients">fill in notes regarding the appointment</string>
    <string name="add_type">Add Type</string>
    <string name="done">Done</string>
    <string name="active_type">Type is Active</string>
    <string name="for_continue">In order to continue, please insert this following details:</string>


</resources>
