<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <EditText
        android:id="@+id/num_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/default_num"
        android:inputType="text" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/minutes_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minutes" />


            <RadioButton
                android:id="@+id/hours_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/hours"/>

            <RadioButton
                android:id="@+id/days_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/days"/>

            <RadioButton
                android:id="@+id/weeks_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/weeks"/>

        </RadioGroup>
    </ScrollView>

</LinearLayout>